About me-- main branch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Areena Arora</title>
 </head>
 <nav>
-    <a href="/aboutme">
+    <a href="/about/">
         <p>
             <span style="font-weight:bolder; font-size: 28px;"> ABOUT ME</span>
         </p>
@@ -83,11 +83,11 @@
             </div>
             <div class="each_card">
                 <!-- <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank"> -->
-                    <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
-                    <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
-                    <p class="card-description">As the city gears up to welcome two new renewable energy backed power
-                        plants, some activists worry about the long-term sustainability of these projects ...
-                    </p>
+                <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
+                <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
+                <p class="card-description">As the city gears up to welcome two new renewable energy backed power
+                    plants, some activists worry about the long-term sustainability of these projects ...
+                </p>
                 <!-- </a> -->
             </div>
             <div class="each_card">
@@ -100,8 +100,7 @@
                 </a>
             </div>
             <div class="each_card">
-                <a href="/climate-essay/"
-                    target="_blank">
+                <a href="/climate-essay/" target="_blank">
                     <p class="card-headline">A PERSONAL ESSAY ON CLIMATE CRISIS</p>
                     <img src="./card-photos/himalayas.jpg" alt="Snow covered mountains of Shimla, India"
                         style="width:100%">
@@ -112,11 +111,11 @@
             </div>
             <div class="each_card">
                 <!-- <a href="https://areenaarora.com/stories/data-viz/vaccines" target="_blank"> -->
-                    <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
-                    <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
-                    <p class="card-description">On CDC’s website, the words explaining vaccine ingredients for both
-                        Pfizer and Moderna start with
-                        the same sentences ...</p>
+                <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
+                <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
+                <p class="card-description">On CDC’s website, the words explaining vaccine ingredients for both
+                    Pfizer and Moderna start with
+                    the same sentences ...</p>
                 <!-- </a> -->
             </div>
             <div class="each_card">
