--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
     <title>About me</title>
 </head>
 <nav>
-    <a href="https://areenaarora.com/aboutme">
+    <a href="../index.html">
         <p>
             <span style="font-weight:bolder; font-size: 28px;"> HOME </span>
         </p>
