--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="../stylesheets/aboutme-stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>About me</title>
+    <meta name="description" content="">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/about/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="About me">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://areenaarora.comundefined">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/about/">
+    <meta name="twitter:title" content="About me">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="https://areenaarora.comundefined">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +83,7 @@
                     Datawrapper, CSS </h3>
                 <h3> <b><span style="background-color:#D3D3D3">Languages:</span></b> Hindi, Punjabi </h3>
             </div>
-            <img src="Areena-Arora.jpeg" class="responsive-img" />
+            <img src="../Areena-Arora.jpeg" class="responsive-img" />
         </div>
         <div>
             <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume</a>
