--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <meta property="og:url" content="https://areenaarora.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Areena Arora">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
+    <meta property="og:image" content="www.areenaarora.com/">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="areenaarora.com">
     <meta property="twitter:url" content="https://areenaarora.com/">
     <meta name="twitter:title" content="Areena Arora">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist!">
+    <meta name="twitter:image" content="Areena-Arora.jpeg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
