--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://areenaarora.com/about/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="About me">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
     <meta property="og:image" content="../Areena-Arora.jpeg">
 
     <!-- Twitter Meta Tags -->
@@ -26,7 +26,7 @@
     <meta property="twitter:domain" content="areenaarora.com">
     <meta property="twitter:url" content="https://areenaarora.com/about/">
     <meta name="twitter:title" content="About me">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist!">
     <meta name="twitter:image" content="../Areena-Arora.jpeg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
