--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Areena Arora">
     <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta property="og:image" content="www.areenaarora.com/">
+    <meta property="og:image" content="https://areenaarora.com/Areena-Arora.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -25,11 +25,12 @@
     <meta property="twitter:url" content="https://areenaarora.com/">
     <meta name="twitter:title" content="Areena Arora">
     <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta name="twitter:image" content="Areena-Arora.jpeg">
+    <meta name="twitter:image" content="https://areenaarora.com/Areena-Arora.jpg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-    <!--  -->
+    <!-- END OF META TAGS -->
+    
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
