--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <!--  -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
