--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="About me">
     <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta property="og:image" content="../Areena-Arora.jpeg">
+    <meta property="og:image" content="../Areena-Arora.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://areenaarora.com/about/">
     <meta name="twitter:title" content="About me">
     <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta name="twitter:image" content="../Areena-Arora.jpeg">
+    <meta name="twitter:image" content="https://areenaarora.com/Areena-Arora.jpg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
