--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="About me">
     <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta property="og:image" content="../Areena-Arora.jpg">
+    <meta property="og:image" content="https://areenaarora.com/Areena-Arora.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
