--- a/about/index.html
+++ b/about/index.html
@@ -12,22 +12,22 @@
 
     <!-- HTML Meta Tags -->
     <title>About me</title>
-    <meta name="description" content="">
+    <meta name="description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://areenaarora.com/about/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="About me">
-    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta property="og:image" content="https://areenaarora.com/Areena-Arora.jpg">
+    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta property="og:image" content="https://areenaarora.com/favicon.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="areenaarora.com">
     <meta property="twitter:url" content="https://areenaarora.com/about/">
     <meta name="twitter:title" content="About me">
-    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta name="twitter:image" content="https://areenaarora.com/Areena-Arora.jpg">
+    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta name="twitter:image" content="https://areenaarora.com/favicon.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
