--- a/climate-essay/index.html
+++ b/climate-essay/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="essay-stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>Climate essay</title>
+    <meta name="description" content="">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/climate-essay/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Climate essay">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://areenaarora.comundefined">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/climate-essay/">
+    <meta name="twitter:title" content="Climate essay">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="https://areenaarora.comundefined">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
