--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 
     <!-- HTML Meta Tags -->
     <title>Areena Arora</title>
-    <meta name="description" content="">
+    <meta name="description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://areenaarora.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Areena Arora">
-    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta property="og:image" content="https://areenaarora.com/Areena-Arora.jpg">
+    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta property="og:image" content="https://areenaarora.com/favicon.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="areenaarora.com">
     <meta property="twitter:url" content="https://areenaarora.com/">
     <meta name="twitter:title" content="Areena Arora">
-    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist!">
-    <meta name="twitter:image" content="https://areenaarora.com/Areena-Arora.jpg">
+    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta name="twitter:image" content="https://areenaarora.com/favicon.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <!-- END OF META TAGS -->
-    
+
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
