Meta tags on climate essay

--- a/climate-essay/index.html
+++ b/climate-essay/index.html
@@ -12,22 +12,22 @@
 
     <!-- HTML Meta Tags -->
     <title>Climate essay</title>
-    <meta name="description" content="">
+    <meta name="description" content="Climate change presents itself most provokingly when it starts affecting the mundane">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://areenaarora.com/climate-essay/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Climate essay">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="https://areenaarora.comundefined">
+    <meta property="og:description" content="Climate change presents itself most provokingly when it starts affecting the mundane">
+    <meta property="og:image" content="https://areenaarora.com/climate-essay/climate-change1.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="areenaarora.com">
     <meta property="twitter:url" content="https://areenaarora.com/climate-essay/">
     <meta name="twitter:title" content="Climate essay">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="https://areenaarora.comundefined">
+    <meta name="twitter:description" content="Climate change presents itself most provokingly when it starts affecting the mundane">
+    <meta name="twitter:image" content="https://areenaarora.com/climate-essay/climate-change1.jpg">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
