--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Comparing Newsrooms' Style Guides</title>
-		<script type="module" crossorigin src="./assets/index.8a7fa6e8.js"></script>
-		<link rel="stylesheet" href="./assets/index.762d25f5.css">
-		<script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
-	</head>
-	<body>
-		<div class="main-content">
-			<header class="header">
-				<h1 class="heading">Comparing Newsrooms' Style Guides</h1>
-				<p class="credits">— by Areena Arora</p>
-			</header>
 
-			<input type="text" id="search-input" placeholder="Search for a term" />
-			<table id="main-table">
-				<thead>
-					<tr>
-						<th>Word</th>
-						<th>Meaning</th>
-						<th>Publication</th>
-					</tr>
-				</thead>
-				<tbody></tbody>
-			</table>
-		</div>
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- OPEN GRAPH META TAGS -->
 
-		
-	</body>
+	<!-- HTML Meta Tags -->
+	<title>Style guides</title>
+	<meta name="description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://areenaarora.com/style-guides/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Style guides">
+	<meta property="og:description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
+	<meta property="og:image" content="https://areenaarora.com/card-photos/typewriter.jpg">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="areenaarora.com">
+	<meta property="twitter:url" content="https://areenaarora.com/style-guides/">
+	<meta name="twitter:title" content="Style guides">
+	<meta name="twitter:description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
+	<meta name="twitter:image" content="https://areenaarora.com/card-photos/typewriter.jpg">
+
+	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+
+	<!--  -->
+	<title>Comparing Newsrooms' Style Guides</title>
+	<script type="module" crossorigin src="./assets/index.8a7fa6e8.js"></script>
+	<link rel="stylesheet" href="./assets/index.762d25f5.css">
+	<script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
+</head>
+
+<body>
+	<div class="main-content">
+		<header class="header">
+			<h1 class="heading">Comparing Newsrooms' Style Guides</h1>
+			<p class="credits">— by Areena Arora</p>
+		</header>
+
+		<input type="text" id="search-input" placeholder="Search for a term" />
+		<table id="main-table">
+			<thead>
+				<tr>
+					<th>Word</th>
+					<th>Meaning</th>
+					<th>Publication</th>
+				</tr>
+			</thead>
+			<tbody></tbody>
+		</table>
+	</div>
+
+
+</body>
+
 </html>
