--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Style guides">
 	<meta property="og:description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
-	<meta property="og:image" content="https://areenaarora.com/card-photos/typewriter.jpg">
+	<meta property="og:image" content="https://areenaarora.com/style-guides/news.jpg">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
 	<meta property="twitter:url" content="https://areenaarora.com/style-guides/">
 	<meta name="twitter:title" content="Style guides">
 	<meta name="twitter:description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
-	<meta name="twitter:image" content="https://areenaarora.com/card-photos/typewriter.jpg">
+	<meta name="twitter:image" content="https://areenaarora.com/style-guides/news.jpg">
 
 	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
