--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -7,15 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- OPEN GRAPH META TAGS -->
 
+
 	<!-- HTML Meta Tags -->
 	<title>Style guides</title>
-	<meta name="description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
+	<meta name="description" content="">
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="https://areenaarora.com/style-guides/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Style guides">
-	<meta property="og:description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
+	<meta property="og:description" content="">
 	<meta property="og:image" content="https://areenaarora.com/style-guides/news.jpg">
 
 	<!-- Twitter Meta Tags -->
@@ -23,11 +24,10 @@
 	<meta property="twitter:domain" content="areenaarora.com">
 	<meta property="twitter:url" content="https://areenaarora.com/style-guides/">
 	<meta name="twitter:title" content="Style guides">
-	<meta name="twitter:description" content="This is a write-up from a talk I presented at NICAR (an annual conference of data journalists) in Atlanta in March, 2022.">
+	<meta name="twitter:description" content="">
 	<meta name="twitter:image" content="https://areenaarora.com/style-guides/news.jpg">
 
 	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
-
 
 	<!--  -->
 	<title>Comparing Newsrooms' Style Guides</title>
