--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -10,13 +10,13 @@
 
 	<!-- HTML Meta Tags -->
 	<title>Style guides</title>
-	<meta name="description" content="">
+	<meta name="description" content="I built a searchable database of five different newsrooms' style guides!">
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="https://areenaarora.com/style-guides/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Style guides">
-	<meta property="og:description" content="">
+	<meta property="og:description" content="I built a searchable database of five different newsrooms' style guides!">
 	<meta property="og:image" content="https://areenaarora.com/style-guides/news.jpg">
 
 	<!-- Twitter Meta Tags -->
@@ -24,7 +24,7 @@
 	<meta property="twitter:domain" content="areenaarora.com">
 	<meta property="twitter:url" content="https://areenaarora.com/style-guides/">
 	<meta name="twitter:title" content="Style guides">
-	<meta name="twitter:description" content="">
+	<meta name="twitter:description" content="I built a searchable database of five different newsrooms' style guides!">
 	<meta name="twitter:image" content="https://areenaarora.com/style-guides/news.jpg">
 
 	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
