--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Style guides">
 	<meta property="og:description" content="I built a searchable database of five different newsrooms' style guides!">
-	<meta property="og:image" content="https://areenaarora.com/style-guides/news.jpg">
+	<meta property="og:image" content="https://areenaarora.com/style-guides/typewriter.jpg">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
 	<meta property="twitter:url" content="https://areenaarora.com/style-guides/">
 	<meta name="twitter:title" content="Style guides">
 	<meta name="twitter:description" content="I built a searchable database of five different newsrooms' style guides!">
-	<meta name="twitter:image" content="https://areenaarora.com/style-guides/news.jpg">
+	<meta name="twitter:image" content="https://areenaarora.com/style-guides/typewriter.jpg">
 
 	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
