--- a/style-guides/index.html
+++ b/style-guides/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="stylesheet-styleguides.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>Style guides</title>
+    <meta name="description"
+        content="Scraped, analyzed and built a searchable database of five newsrooms' style guides!">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/comparing-newsrooms-styleguides/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Style guides">
+    <meta property="og:description"
+        content="Scraped, analyzed and built a searchable database of five newsrooms' style guides!">
+    <meta property="og:image" content="https://areenaarora.com/style-guides/news.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/comparing-newsrooms-styleguides/">
+    <meta name="twitter:title" content="Style guides">
+    <meta name="twitter:description"
+        content="Scraped, analyzed and built a searchable database of five newsrooms' style guides!">
+    <meta name="twitter:image" content="https://areenaarora.com/style-guides/news.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,20 +53,36 @@
         <p>In May 2020, when George Floyd was murdered during an arrest in Minneapolis, it sparked nationwide protests
             as you may recall. In the aftermath of Black Lives Matter protests then the conversation around police
             brutality was brought to center stage. Something changed in newsrooms.</p>
-            <p>Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia Journalism Review updated their style guides to capitalize the world “Black”.</p>
-            <p>But, this isn’t new. And it’s not just the word “Black” that has been brought to mainstream discussion. After 9/11, Reuters updated its guide to remove the word "terrorist" and adviced journalists to use more “specific terms” like bomber, hijacker, attacker or gunman.</p>
-            <p>But, let’s take a step back. Why should we even care? What’s the point of all of this?</p>
-            <p>It’s because our readers care. In their book Global Terrorism and New Media writers Philip Seib and Dana Janbek point out that despite our best efforts to remain neutral, journalists’ influence is unavoidable. Seib is a journalist and Janbek is a communications scholar and researcher.</p>
-            <p class="highlighted-words">Our word choices matter.</p>
-            <p>And, that's what inspired this project!</p>
-            <p>I created a unified database — a one-stop-shop if you will— to compare different newsrooms and the word choices they make. I wanted to see if these style guides accurately capture the times we live in and their readerships’ priorities.</p>
-            <p>I started with BBC, BuzzFeed, NPR, Guardian and Reuters. These five reflect a pretty wide ranging audience and also because they were available online for free!</p>
-            <p>Here’s what I learned!</p>
-            <p>On something like abortion, newsrooms tend to have similar language and advice against using “pro-life” or “pro-choice.</p>
-            <p>Going back to my initial example of the word “terrorist”; newsrooms tend to have fairly similar rules, with minor exceptions here and there. For BBC, the word terrorist in itself isn’t banned, but the style guide advices journalists to be cautious with using it. NPR makes a solid case for using very precise language. The Guardian refers to UN’s definition of terrorism.</p>
-            <p>There's a lot more and I could go on and on, but if you'd like to check the database for yourself, it's linked below!</p>
-            <p><span style="font-size: 18px; font-style: italic">Please note, the scrape for this dataset was done on February 26, 2022!</span></p>
-            <p class="highlighted-words"><a href="https://areenaarora.com/comparing-newsrooms-styleguides"><span style="font-size: 22px;">Check the database here!</span></a></p>
-            <p class="code-block"><a href="https://github.com/areenaarora/scraping-newsroom-style-guides" target="_blank">If you'd like to check the code for this project, click here!</a></p>
+        <p>Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia Journalism Review updated
+            their style guides to capitalize the world “Black”.</p>
+        <p>But, this isn’t new. And it’s not just the word “Black” that has been brought to mainstream discussion. After
+            9/11, Reuters updated its guide to remove the word "terrorist" and adviced journalists to use more “specific
+            terms” like bomber, hijacker, attacker or gunman.</p>
+        <p>But, let’s take a step back. Why should we even care? What’s the point of all of this?</p>
+        <p>It’s because our readers care. In their book Global Terrorism and New Media writers Philip Seib and Dana
+            Janbek point out that despite our best efforts to remain neutral, journalists’ influence is unavoidable.
+            Seib is a journalist and Janbek is a communications scholar and researcher.</p>
+        <p class="highlighted-words">Our word choices matter.</p>
+        <p>And, that's what inspired this project!</p>
+        <p>I created a unified database — a one-stop-shop if you will— to compare different newsrooms and the word
+            choices they make. I wanted to see if these style guides accurately capture the times we live in and their
+            readerships’ priorities.</p>
+        <p>I started with BBC, BuzzFeed, NPR, Guardian and Reuters. These five reflect a pretty wide ranging audience
+            and also because they were available online for free!</p>
+        <p>Here’s what I learned!</p>
+        <p>On something like abortion, newsrooms tend to have similar language and advice against using “pro-life” or
+            “pro-choice.</p>
+        <p>Going back to my initial example of the word “terrorist”; newsrooms tend to have fairly similar rules, with
+            minor exceptions here and there. For BBC, the word terrorist in itself isn’t banned, but the style guide
+            advices journalists to be cautious with using it. NPR makes a solid case for using very precise language.
+            The Guardian refers to UN’s definition of terrorism.</p>
+        <p>There's a lot more and I could go on and on, but if you'd like to check the database for yourself, it's
+            linked below!</p>
+        <p><span style="font-size: 18px; font-style: italic">Please note, the scrape for this dataset was done on
+                February 26, 2022!</span></p>
+        <p class="highlighted-words"><a href="https://areenaarora.com/comparing-newsrooms-styleguides"><span
+                    style="font-size: 22px;">Check the database here!</span></a></p>
+        <p class="code-block"><a href="https://github.com/areenaarora/scraping-newsroom-style-guides" target="_blank">If
+                you'd like to check the code for this project, click here!</a></p>
     </div>
 </body>
