Meta tag - discretionary funds page

--- a/discretionary-funds/index.html
+++ b/discretionary-funds/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="stylesheet-funds.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>Discretionary funds</title>
+    <meta name="description" content="The city council allocated over $371 million in discretionary funding in 2021.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/discretionary-funds/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Discretionary funds">
+    <meta property="og:description"
+        content="The city council allocated over $371 million in discretionary funding in 2021.">
+    <meta property="og:image" content="https://areenaarora.com/discretionary-funds/nyc.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/discretionary-funds/">
+    <meta name="twitter:title" content="Discretionary funds">
+    <meta name="twitter:description"
+        content="The city council allocated over $371 million in discretionary funding in 2021.">
+    <meta name="twitter:image" content="https://areenaarora.com/discretionary-funds/nyc.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    <!--  -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -478,17 +503,34 @@
         <p>“When people are placed in these [deportation] situations, their stories are minimized and put in a limited
             perspective,” Castro said. “Many of our clients have been here many years and we want to reinforce that
             their stories do matter. Their community and family ties do matter.”</p>
-        <p>When a client is first assigned to an attorney, the first step is to see “if they’re being properly charged as a removable,” Wilkinson said.</p>
-        <p>Often the attorneys find that certain crimes don’t qualify people to be removed from the country, she said. But, if the lawyers do find that their client is in fact “removeable,” they look for another defense for relief, Wilkinson added.</p>
-        <p>“Immigration law is best thought of as a menu,” she said. The firm looks at how long their clients have been in the country, their history and such from a slate of options, she added. Everything from their clients’ community ties to immigration status is studied.</p>
+        <p>When a client is first assigned to an attorney, the first step is to see “if they’re being properly charged
+            as a removable,” Wilkinson said.</p>
+        <p>Often the attorneys find that certain crimes don’t qualify people to be removed from the country, she said.
+            But, if the lawyers do find that their client is in fact “removeable,” they look for another defense for
+            relief, Wilkinson added.</p>
+        <p>“Immigration law is best thought of as a menu,” she said. The firm looks at how long their clients have been
+            in the country, their history and such from a slate of options, she added. Everything from their clients’
+            community ties to immigration status is studied.</p>
         <p>“Our goal is to figure out as many eligible relief paths as possible,” she said.</p>
-        <p>Someone who has been on a green card for even decades could suddenly get picked up by ICE for crimes committed years ago. These could be anything from minor drug charges to more serious offenses.</p>
-        <p>Once on detention, there are two criteria to be eligible to receive representation with the program. First being that the individual’s income should be 200 percent below the federal poverty guideline.</p>
-        <p>The second criteria is to look at the reason they’ve been arrested which is called a “criminal carve out”. The “criminal carve out” in simpler terms is a list of crimes, detained under which, the city will turn people to ICE’s custody. There has been growing momentum for the city to rid the program of this filter making more people eligible for representation.</p>
-        <p>The three providers use their own private funding to represent detainees subject to the Criminal Carve-Out, allowing them to maintain universal representation in immigration detention cases, Wilkinson said. </p>
-        <p>Being in a state that has the political will to support immigrants via such a program is greatly beneficial, Wilkinson said, pointing to a five-year old study that assessed the merits of the program.</p>
-        <p>The challenge in replicating the program to other states is in states “where there’s no political will,” Wilkinson said. “There are more detention centers in certain states and it’ll take a nationally coordinated movement to make such programs more widely available.”</p>
-        <p>“We get to make some really deep connections. Often clients show us their family photos, children’s drawings and letters … When you have a win, it goes back to the name of the program. It’s all about keeping families together,” Ahmad said.</p>
-        <p class="code-block"><a href="https://github.com/areenaarora/discretionary_funding/blob/main/Analyses.ipynb" target="_blank">If you'd like to check the code for this project, click here!</a></p>
+        <p>Someone who has been on a green card for even decades could suddenly get picked up by ICE for crimes
+            committed years ago. These could be anything from minor drug charges to more serious offenses.</p>
+        <p>Once on detention, there are two criteria to be eligible to receive representation with the program. First
+            being that the individual’s income should be 200 percent below the federal poverty guideline.</p>
+        <p>The second criteria is to look at the reason they’ve been arrested which is called a “criminal carve out”.
+            The “criminal carve out” in simpler terms is a list of crimes, detained under which, the city will turn
+            people to ICE’s custody. There has been growing momentum for the city to rid the program of this filter
+            making more people eligible for representation.</p>
+        <p>The three providers use their own private funding to represent detainees subject to the Criminal Carve-Out,
+            allowing them to maintain universal representation in immigration detention cases, Wilkinson said. </p>
+        <p>Being in a state that has the political will to support immigrants via such a program is greatly beneficial,
+            Wilkinson said, pointing to a five-year old study that assessed the merits of the program.</p>
+        <p>The challenge in replicating the program to other states is in states “where there’s no political will,”
+            Wilkinson said. “There are more detention centers in certain states and it’ll take a nationally coordinated
+            movement to make such programs more widely available.”</p>
+        <p>“We get to make some really deep connections. Often clients show us their family photos, children’s drawings
+            and letters … When you have a win, it goes back to the name of the program. It’s all about keeping families
+            together,” Ahmad said.</p>
+        <p class="code-block"><a href="https://github.com/areenaarora/discretionary_funding/blob/main/Analyses.ipynb"
+                target="_blank">If you'd like to check the code for this project, click here!</a></p>
     </div>
 </body>
