street flooding page meta tags

--- a/street-flooding/index.html
+++ b/street-flooding/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="street-stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>Street flooding in NYC</title>
+    <meta name="description"
+        content="Between January 1, 2020, and March 31, 2022, New Yorkers lodged over 67,000 street flooding-related complaints with the city government.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/street-flooding/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Street flooding in NYC">
+    <meta property="og:description"
+        content="Between January 1, 2020, and March 31, 2022, New Yorkers lodged over 67,000 street flooding-related complaints with the city government.">
+    <meta property="og:image" content="https://areenaarora.com/discretionary-funds/rain.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/street-flooding/">
+    <meta name="twitter:title" content="Street flooding in NYC">
+    <meta name="twitter:description"
+        content="Between January 1, 2020, and March 31, 2022, New Yorkers lodged over 67,000 street flooding-related complaints with the city government.">
+    <meta name="twitter:image" content="https://areenaarora.com/discretionary-funds/rain.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -116,7 +144,9 @@
         </p>
         <p>“On my block, we’ve always had flooding,” D'souza said. “I’m not even close to water.”
         </p>
-        <p>“We have old sewer systems … but with that in mind, we have to be careful with what we’re dumping down the drain,” he said, adding that people tend to be careless about proper waste disposal which leads to increases in drain pipes getting clogged. 
+        <p>“We have old sewer systems … but with that in mind, we have to be careful with what we’re dumping down the
+            drain,” he said, adding that people tend to be careless about proper waste disposal which leads to increases
+            in drain pipes getting clogged.
         </p>
         <p>City’s department of environmental protection could not be reached for comments.
         </p>
