Responsive design rules

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="mailt:areena.arora@columbia.edu" target="_blank"></a>
             </i>
         </div>
-        <h2> I'm a <span style="color: #ff715b">data journalist.</span> I'm: </h2>
+        <h2> I'm a <span style="color: #ea624e">data journalist.</span> I'm: </h2>
         <h3>
             <ul><span style="background-color:#D3D3D3">~Interested in</span> covering climate crisis, environmental
                 justice and infrastructure.
