--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@
                     Datawrapper, CSS </h3>
                 <h3> <b><span style="background-color:#D3D3D3">Languages:</span></b> Hindi, Punjabi </h3>
             </div>
-            <img src="../Areena-Arora.jpg" class="responsive-img" />
+            <img src="../Areena-Arora.jpg" class="responsive-img" alt="Areena's not so professional headshot"/>
         </div>
         <div>
             <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume</a>
