--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <!-- HTML Meta Tags -->
     <title>Areena Arora</title>
-    <meta name="description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta name="description" content="Hi! I'm Areena, an aspiring data journalist 🌻">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://areenaarora.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Areena Arora">
-    <meta property="og:description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta property="og:description" content="Hi! I'm Areena, an aspiring data journalist 🌻">
     <meta property="og:image" content="https://areenaarora.com/favicon.png">
 
     <!-- Twitter Meta Tags -->
@@ -24,7 +24,7 @@
     <meta property="twitter:domain" content="areenaarora.com">
     <meta property="twitter:url" content="https://areenaarora.com/">
     <meta name="twitter:title" content="Areena Arora">
-    <meta name="twitter:description" content="Hi! I'm Areena, an aspirering data journalist 🌻">
+    <meta name="twitter:description" content="Hi! I'm Areena, an aspiring data journalist 🌻">
     <meta name="twitter:image" content="https://areenaarora.com/favicon.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
@@ -77,7 +77,7 @@
         <br>
         <h2>Here's some of my work</h2>
         <div class="cards-wrapper">
-            <div class="each_card">
+            <div class="each-card">
                 <a href="https://github.com/areenaarora/new-york-senate_scrape" target="_blank">
                     <p class="card-headline">NEW YORK LAWS SCRAPED</p>
                     <img src="./card-photos/new-york.jpg" alt="Grand Central Station in New York" style="width:100%">
@@ -86,7 +86,7 @@
                     </p>
                 </a>
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <a href="/discretionary-funds/" target="_blank">
                     <p class="card-headline">A CITY PROGRAM TO HELP IMMIGRANTS</p>
                     <img src="./card-photos/dollars.jpg" alt="Money" style="width:100%; height:210px">
@@ -95,7 +95,7 @@
                     </p>
                 </a>
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <a href="/style-guides/" target="_blank">
                     <p class="card-headline">COMPARING NEWSROOMS' STYLEGUIDES</p>
                     <img src="./card-photos/typewriter.jpg" alt="Typewriter" style="width:100%">
@@ -106,7 +106,7 @@
                     </p>
                 </a>
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <!-- <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank"> -->
                 <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
                 <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
@@ -115,7 +115,7 @@
                 </p>
                 <!-- </a> -->
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <a href="/street-flooding/" target="_blank">
                     <p class="card-headline">STREET FLOODING IN NYC</p>
                     <img src="./card-photos/nyc-stree-flooding.jpg" alt="Street Flooding" style="width:100%">
@@ -124,7 +124,7 @@
                     </p>
                 </a>
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <a href="/climate-essay/" target="_blank">
                     <p class="card-headline">A PERSONAL ESSAY ON CLIMATE CRISIS</p>
                     <img src="./card-photos/himalayas.jpg" alt="Snow covered mountains of Shimla, India"
@@ -134,7 +134,7 @@
                         nothing special to look forward to, she’d lament ...</p>
                 </a>
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <!-- <a href="https://areenaarora.com/stories/data-viz/vaccines" target="_blank"> -->
                 <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
                 <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
@@ -143,7 +143,7 @@
                     the same sentences ...</p>
                 <!-- </a> -->
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <a href="https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b" target="_blank">
                     <p class="card-headline">RISE IN RV LIVING</p>
                     <img src="./card-photos/rv-life.jpg" alt="A parked RV" style="width:100%">
@@ -151,7 +151,7 @@
                     </p>
                 </a>
             </div>
-            <div class="each_card">
+            <div class="each-card">
                 <a href="https://www.idahopress.com/news/local/2cscoop/culvert-concerns-culvert-report-reveals-11-other-structures-in-deficient-condition/article_e1386f9b-49d1-518f-af3f-b20cad88bf62.html"
                     target="_blank">
                     <p class="card-headline">INVESTIGATING CULVERT INSPECTIONS</p>
