--- a/street-flooding/index.html
+++ b/street-flooding/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html lang="en">
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
