--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </nav>
         <h1>Hi! I'm Areena! 👩🏻‍💻</h1>
         <div class="social-media-icons">
-            <a href="https://twitter.com/AreenaArora" target='blank'> <i class="fa-brands fa-twitter fa-2x"
+            <a href="https://twitter.com/AreenaArora" target='blank' aria-label="Areena Arora's Twitter"> <i class="fa-brands fa-twitter fa-2x"
                     style="color:#1DA1F2"></i></a>
-            <a href="https://www.linkedin.com/in/areena-arora" target="_blank"><i class="fa-brands fa-linkedin-in fa-2x"
+            <a href="https://www.linkedin.com/in/areena-arora" target="_blank" aria-label="Areena Arora's LinkedIn"><i class="fa-brands fa-linkedin-in fa-2x"
                     style="color:#8E6BAB"></i></a>
-            <a href="https://github.com/areenaarora" target="_blank"><i class="fa-brands fa-github fa-2x"
+            <a href="https://github.com/areenaarora" target="_blank" aria-label="Areena Arora's GitHub"><i class="fa-brands fa-github fa-2x"
                     style="color:#333"></i></a>
-            <a href="mailt:areena.arora@columbia.edu" target="_blank"><i class="fa-solid fa-envelope-open-text fa-2x"
+            <a href="mailt:areena.arora@columbia.edu" target="_blank" aria-label="Areena Arora's email"><i class="fa-solid fa-envelope-open-text fa-2x"
                     style="color:rgb(206, 68, 68)"></i></a>
         </div>
         <h2> I'm a <span style="color: #ea624e">data journalist.</span> I'm: </h2>
