--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </div>
             <div class="each-card">
                 <a href="/discretionary-funds/" target="_blank">
-                    <p class="card-headline">A CITY PROGRAM TO HELP IMMIGRANTS</p>
-                    <img src="./card-photos/test.jpg" alt="Money" style="width:100%; height:210px">
+                    <p class="card-headline">CITY COUNCIL'S DISCRETIONARY FUNDS</p>
+                    <img src="./card-photos/people.jpg" alt="Generic image of people walking" style="width:100%; height:210px">
                     <p class="card-description">New York City Family Unity Project is the country’s first public program
                         for immigrants facing deportation, started in the city ...
                     </p>
