--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         </nav>
         <h1>Hi! I'm Areena! 👩🏻‍💻</h1>
         <div class="social-media-icons">
-            <a href="https://twitter.com/AreenaArora" target='blank' aria-label="Areena Arora's Twitter"> <i class="fa-brands fa-twitter fa-2x"
-                    style="color:#1DA1F2"></i></a>
-            <a href="https://www.linkedin.com/in/areena-arora" target="_blank" aria-label="Areena Arora's LinkedIn"><i class="fa-brands fa-linkedin-in fa-2x"
-                    style="color:#8E6BAB"></i></a>
-            <a href="https://github.com/areenaarora" target="_blank" aria-label="Areena Arora's GitHub"><i class="fa-brands fa-github fa-2x"
-                    style="color:#333"></i></a>
-            <a href="mailt:areena.arora@columbia.edu" target="_blank" aria-label="Areena Arora's email"><i class="fa-solid fa-envelope-open-text fa-2x"
-                    style="color:rgb(206, 68, 68)"></i></a>
+            <a href="https://twitter.com/AreenaArora" target='blank' aria-label="Areena Arora's Twitter"> <i
+                    class="fa-brands fa-twitter fa-2x" style="color:#1DA1F2"></i></a>
+            <a href="https://www.linkedin.com/in/areena-arora" target="_blank" aria-label="Areena Arora's LinkedIn"><i
+                    class="fa-brands fa-linkedin-in fa-2x" style="color:#8E6BAB"></i></a>
+            <a href="https://github.com/areenaarora" target="_blank" aria-label="Areena Arora's GitHub"><i
+                    class="fa-brands fa-github fa-2x" style="color:#333"></i></a>
+            <a href="mailt:areena.arora@columbia.edu" target="_blank" aria-label="Areena Arora's email"><i
+                    class="fa-solid fa-envelope-open-text fa-2x" style="color:rgb(206, 68, 68)"></i></a>
         </div>
         <h2> I'm a <span style="color: #ea624e">data journalist.</span> I'm: </h2>
         <h3>
@@ -72,6 +72,15 @@
         <h2>Here's some of my work</h2>
         <div class="cards-wrapper">
             <div class="each-card">
+                <a href="/nyc-energy/" target="_blank">
+                    <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
+                    <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
+                    <p class="card-description">As the city gears up to welcome two new renewable energy backed power
+                        plants, some activists worry about the long-term sustainability of these projects ...
+                    </p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="https://github.com/areenaarora/new-york-senate_scrape" target="_blank">
                     <p class="card-headline">NEW YORK LAWS SCRAPED</p>
                     <img src="./card-photos/new-york.jpg" alt="Grand Central Station in New York" style="width:100%">
@@ -83,7 +92,8 @@
             <div class="each-card">
                 <a href="/discretionary-funds/" target="_blank">
                     <p class="card-headline">CITY COUNCIL'S DISCRETIONARY FUNDS</p>
-                    <img src="./card-photos/people.jpg" alt="Generic image of people walking" style="width:100%; height:210px">
+                    <img src="./card-photos/people.jpg" alt="Generic image of people walking"
+                        style="width:100%; height:210px">
                     <p class="card-description">New York City Family Unity Project is the country’s first public program
                         for immigrants facing deportation, started in the city ...
                     </p>
@@ -101,15 +111,6 @@
                 </a>
             </div>
             <div class="each-card">
-                <!-- <a href="https://areenaarora.com/stories/data-viz/style-guides/" target="_blank"> -->
-                <p class="card-headline">NYC'S CLEAN ENERGY DEBATE</p>
-                <img src="./card-photos/power-grid.jpg" alt="Power Grid" style="width:100%">
-                <p class="card-description">As the city gears up to welcome two new renewable energy backed power
-                    plants, some activists worry about the long-term sustainability of these projects ...
-                </p>
-                <!-- </a> -->
-            </div>
-            <div class="each-card">
                 <a href="/street-flooding/" target="_blank">
                     <p class="card-headline">STREET FLOODING IN NYC</p>
                     <img src="./card-photos/nyc-stree-flooding.jpg" alt="Street Flooding" style="width:100%">
@@ -121,11 +122,10 @@
             <div class="each-card">
                 <a href="/climate-essay/" target="_blank">
                     <p class="card-headline">A PERSONAL ESSAY ON CLIMATE CRISIS</p>
-                    <img src="./card-photos/himalayas.jpg" alt="Snow covered mountains of Shimla, India"
+                    <img src="./card-photos/mountains.jpg" alt="Snow covered mountains"
                         style="width:100%">
                     <p class="card-description">My mom often complained though, in confusion more than dismay, about how
-                        many of her winter-favorite vegetables were now available almost all year long. There was
-                        nothing special to look forward to, she’d lament ...</p>
+                        many of her winter-favorite vegetables were now available almost all year long ...</p>
                 </a>
             </div>
             <div class="each-card">
